y.output

state 0
	$accept: .namespaces $end 

	NAMESPACE  shift 3
	.  error

	namespaces  goto 1
	namespace  goto 2

state 1
	$accept:  namespaces.$end 
	namespaces:  namespaces.namespace 

	$end  accept
	NAMESPACE  shift 3
	.  error

	namespace  goto 4

state 2
	namespaces:  namespace.    (1)

	.  reduce 1 (src line 50)


state 3
	namespace:  NAMESPACE.qualified_name imports BEGIN declarations END 

	IDENTIFIER  shift 6
	.  error

	qualified_name  goto 5

state 4
	namespaces:  namespaces namespace.    (2)

	.  reduce 2 (src line 56)


state 5
	namespace:  NAMESPACE qualified_name.imports BEGIN declarations END 
	qualified_name:  qualified_name.. IDENTIFIER 
	imports: .    (4)

	.  shift 8
	.  reduce 4 (src line 72)

	imports  goto 7

state 6
	qualified_name:  IDENTIFIER.    (52)

	.  reduce 52 (src line 279)


state 7
	namespace:  NAMESPACE qualified_name imports.BEGIN declarations END 
	imports:  imports.IMPORT qualified_name_with_wildcard 
	imports:  imports.APPEND qualified_name_with_wildcard 

	IMPORT  shift 10
	APPEND  shift 11
	BEGIN  shift 9
	.  error


state 8
	qualified_name:  qualified_name ..IDENTIFIER 

	IDENTIFIER  shift 12
	.  error


state 9
	namespace:  NAMESPACE qualified_name imports BEGIN.declarations END 
	declarations: .    (7)

	.  reduce 7 (src line 86)

	declarations  goto 13

state 10
	imports:  imports IMPORT.qualified_name_with_wildcard 

	IDENTIFIER  shift 6
	.  error

	qualified_name  goto 15
	qualified_name_with_wildcard  goto 14

state 11
	imports:  imports APPEND.qualified_name_with_wildcard 

	IDENTIFIER  shift 6
	.  error

	qualified_name  goto 15
	qualified_name_with_wildcard  goto 16

state 12
	qualified_name:  qualified_name . IDENTIFIER.    (53)

	.  reduce 53 (src line 284)


state 13
	namespace:  NAMESPACE qualified_name imports BEGIN declarations.END 
	declarations:  declarations.declaration 
	document: .    (25)

	DOCUMENT_COMMENT  shift 21
	END  shift 17
	.  reduce 25 (src line 197)

	declaration  goto 18
	entity  goto 19
	document  goto 20

state 14
	imports:  imports IMPORT qualified_name_with_wildcard.    (5)

	.  reduce 5 (src line 77)


state 15
	qualified_name:  qualified_name.. IDENTIFIER 
	qualified_name_with_wildcard:  qualified_name.    (54)
	qualified_name_with_wildcard:  qualified_name.. * 

	.  shift 22
	.  reduce 54 (src line 289)


state 16
	imports:  imports APPEND qualified_name_with_wildcard.    (6)

	.  reduce 6 (src line 81)


state 17
	namespace:  NAMESPACE qualified_name imports BEGIN declarations END.    (3)

	.  reduce 3 (src line 62)


state 18
	declarations:  declarations declaration.    (8)

	.  reduce 8 (src line 91)


state 19
	declaration:  entity.    (9)

	.  reduce 9 (src line 96)


state 20
	entity:  document.abstract ENTITY IDENTIFIER includes BEGIN fields END 
	entity:  document.SERVICE IDENTIFIER BEGIN methods END 
	abstract: .    (27)

	ABSTRACT  shift 25
	SERVICE  shift 24
	.  reduce 27 (src line 207)

	abstract  goto 23

state 21
	document:  DOCUMENT_COMMENT.    (26)

	.  reduce 26 (src line 202)


state 22
	qualified_name:  qualified_name ..IDENTIFIER 
	qualified_name_with_wildcard:  qualified_name ..* 

	IDENTIFIER  shift 12
	*  shift 26
	.  error


state 23
	entity:  document abstract.ENTITY IDENTIFIER includes BEGIN fields END 

	ENTITY  shift 27
	.  error


state 24
	entity:  document SERVICE.IDENTIFIER BEGIN methods END 

	IDENTIFIER  shift 28
	.  error


state 25
	abstract:  ABSTRACT.    (28)

	.  reduce 28 (src line 212)


state 26
	qualified_name_with_wildcard:  qualified_name . *.    (55)

	.  reduce 55 (src line 294)


state 27
	entity:  document abstract ENTITY.IDENTIFIER includes BEGIN fields END 

	IDENTIFIER  shift 29
	.  error


state 28
	entity:  document SERVICE IDENTIFIER.BEGIN methods END 

	BEGIN  shift 30
	.  error


state 29
	entity:  document abstract ENTITY IDENTIFIER.includes BEGIN fields END 
	includes: .    (12)
	imports: .    (4)

	BEGIN  reduce 12 (src line 122)
	.  reduce 4 (src line 72)

	imports  goto 32
	includes  goto 31

state 30
	entity:  document SERVICE IDENTIFIER BEGIN.methods END 
	methods: .    (18)

	.  reduce 18 (src line 156)

	methods  goto 33

state 31
	entity:  document abstract ENTITY IDENTIFIER includes.BEGIN fields END 

	BEGIN  shift 34
	.  error


state 32
	imports:  imports.IMPORT qualified_name_with_wildcard 
	imports:  imports.APPEND qualified_name_with_wildcard 
	includes:  imports.INCLUDES qualified_name 
	includes:  imports.APPEND qualified_name 

	IMPORT  shift 10
	INCLUDES  shift 36
	APPEND  shift 35
	.  error


state 33
	entity:  document SERVICE IDENTIFIER BEGIN methods.END 
	methods:  methods.method 
	document: .    (25)

	DOCUMENT_COMMENT  shift 21
	END  shift 37
	.  reduce 25 (src line 197)

	method  goto 38
	document  goto 39

state 34
	entity:  document abstract ENTITY IDENTIFIER includes BEGIN.fields END 
	fields: .    (15)

	.  reduce 15 (src line 136)

	fields  goto 40

state 35
	imports:  imports APPEND.qualified_name_with_wildcard 
	includes:  imports APPEND.qualified_name 

	IDENTIFIER  shift 6
	.  error

	qualified_name  goto 41
	qualified_name_with_wildcard  goto 16

state 36
	includes:  imports INCLUDES.qualified_name 

	IDENTIFIER  shift 6
	.  error

	qualified_name  goto 42

state 37
	entity:  document SERVICE IDENTIFIER BEGIN methods END.    (11)

	.  reduce 11 (src line 113)


state 38
	methods:  methods method.    (19)

	.  reduce 19 (src line 161)


state 39
	method:  document.IDENTIFIER AS request response CLOSE 

	IDENTIFIER  shift 43
	.  error


state 40
	entity:  document abstract ENTITY IDENTIFIER includes BEGIN fields.END 
	fields:  fields.field 
	document: .    (25)

	DOCUMENT_COMMENT  shift 21
	END  shift 44
	.  reduce 25 (src line 197)

	field  goto 45
	document  goto 46

state 41
	includes:  imports APPEND qualified_name.    (14)
	qualified_name:  qualified_name.. IDENTIFIER 
	qualified_name_with_wildcard:  qualified_name.    (54)
	qualified_name_with_wildcard:  qualified_name.. * 

	BEGIN  reduce 14 (src line 131)
	.  shift 22
	.  reduce 54 (src line 289)


state 42
	includes:  imports INCLUDES qualified_name.    (13)
	qualified_name:  qualified_name.. IDENTIFIER 

	.  shift 8
	.  reduce 13 (src line 127)


state 43
	method:  document IDENTIFIER.AS request response CLOSE 

	AS  shift 47
	.  error


state 44
	entity:  document abstract ENTITY IDENTIFIER includes BEGIN fields END.    (10)

	.  reduce 10 (src line 102)


state 45
	fields:  fields field.    (16)

	.  reduce 16 (src line 141)


state 46
	field:  document.IDENTIFIER AS modified_type CLOSE 

	IDENTIFIER  shift 48
	.  error


state 47
	method:  document IDENTIFIER AS.request response CLOSE 
	request: .    (21)

	ACCEPTS  shift 50
	.  reduce 21 (src line 177)

	request  goto 49

state 48
	field:  document IDENTIFIER.AS modified_type CLOSE 

	AS  shift 51
	.  error


state 49
	method:  document IDENTIFIER AS request.response CLOSE 
	response: .    (23)

	RETURNS  shift 53
	.  reduce 23 (src line 187)

	response  goto 52

state 50
	request:  ACCEPTS.modified_type 

	REQUIRED  shift 56
	NULLABLE  shift 57
	.  error

	occurrence  goto 55
	modified_type  goto 54

state 51
	field:  document IDENTIFIER AS.modified_type CLOSE 

	REQUIRED  shift 56
	NULLABLE  shift 57
	.  error

	occurrence  goto 55
	modified_type  goto 58

state 52
	method:  document IDENTIFIER AS request response.CLOSE 

	CLOSE  shift 59
	.  error


state 53
	response:  RETURNS.modified_type 

	REQUIRED  shift 56
	NULLABLE  shift 57
	.  error

	occurrence  goto 55
	modified_type  goto 60

state 54
	request:  ACCEPTS modified_type.    (22)

	.  reduce 22 (src line 182)


state 55
	modified_type:  occurrence.iterations baal_type 
	iterations: .    (30)

	.  reduce 30 (src line 227)

	iterations  goto 61

state 56
	occurrence:  REQUIRED.    (33)

	.  reduce 33 (src line 241)


state 57
	occurrence:  NULLABLE.    (34)

	.  reduce 34 (src line 243)


state 58
	field:  document IDENTIFIER AS modified_type.CLOSE 

	CLOSE  shift 62
	.  error


state 59
	method:  document IDENTIFIER AS request response CLOSE.    (20)

	.  reduce 20 (src line 166)


state 60
	response:  RETURNS modified_type.    (24)

	.  reduce 24 (src line 192)


state 61
	modified_type:  occurrence iterations.baal_type 
	iterations:  iterations.LIST_OF 
	iterations:  iterations.DICTIONARY_OF 

	IDENTIFIER  shift 6
	LIST_OF  shift 64
	DICTIONARY_OF  shift 65
	BOOLEAN  shift 68
	INTEGER8  shift 69
	INTEGER16  shift 70
	INTEGER32  shift 71
	INTEGER64  shift 72
	FLOAT32  shift 73
	FLOAT64  shift 74
	DECIMAL32  shift 75
	DECIMAL64  shift 76
	DATE  shift 77
	TIME  shift 78
	TIMESTAMP  shift 79
	STRING  shift 80
	BINARY  shift 81
	.  error

	baal_type  goto 63
	primitive_type  goto 66
	reference_type  goto 67
	qualified_name  goto 82

state 62
	field:  document IDENTIFIER AS modified_type CLOSE.    (17)

	.  reduce 17 (src line 146)


state 63
	modified_type:  occurrence iterations baal_type.    (29)

	.  reduce 29 (src line 217)


state 64
	iterations:  iterations LIST_OF.    (31)

	.  reduce 31 (src line 232)


state 65
	iterations:  iterations DICTIONARY_OF.    (32)

	.  reduce 32 (src line 236)


state 66
	baal_type:  primitive_type.    (35)

	.  reduce 35 (src line 245)


state 67
	baal_type:  reference_type.    (36)

	.  reduce 36 (src line 250)


state 68
	primitive_type:  BOOLEAN.    (37)

	.  reduce 37 (src line 255)


state 69
	primitive_type:  INTEGER8.    (38)

	.  reduce 38 (src line 257)


state 70
	primitive_type:  INTEGER16.    (39)

	.  reduce 39 (src line 258)


state 71
	primitive_type:  INTEGER32.    (40)

	.  reduce 40 (src line 259)


state 72
	primitive_type:  INTEGER64.    (41)

	.  reduce 41 (src line 260)


state 73
	primitive_type:  FLOAT32.    (42)

	.  reduce 42 (src line 261)


state 74
	primitive_type:  FLOAT64.    (43)

	.  reduce 43 (src line 262)


state 75
	primitive_type:  DECIMAL32.    (44)

	.  reduce 44 (src line 263)


state 76
	primitive_type:  DECIMAL64.    (45)

	.  reduce 45 (src line 264)


state 77
	primitive_type:  DATE.    (46)

	.  reduce 46 (src line 265)


state 78
	primitive_type:  TIME.    (47)

	.  reduce 47 (src line 266)


state 79
	primitive_type:  TIMESTAMP.    (48)

	.  reduce 48 (src line 267)


state 80
	primitive_type:  STRING.    (49)

	.  reduce 49 (src line 268)


state 81
	primitive_type:  BINARY.    (50)

	.  reduce 50 (src line 269)


state 82
	reference_type:  qualified_name.    (51)
	qualified_name:  qualified_name.. IDENTIFIER 

	.  shift 8
	.  reduce 51 (src line 271)


40 terminals, 24 nonterminals
56 grammar rules, 83/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
73 working sets used
memory: parser 37/30000
11 extra closures
65 shift entries, 3 exceptions
34 goto entries
4 entries saved by goto default
Optimizer space used: output 87/30000
87 table entries, 0 zero
maximum spread: 40, maximum offset: 61
